# rv-emu-rs

./: .gitignore  Cargo.toml  LICENSE  readme.md
bad_apple/: Cargo.toml  build.rs  device.x
bad_apple/.cargo/: config.toml
bad_apple/src/: main.rs
rust_riscv/: Cargo.toml  link.x
rust_riscv/.cargo/: config.toml
rust_riscv/src/: main.rs
src/: cpu.rs  elf_analyzer.rs  emulator.rs  errors.rs  main.rs  manual_debugger.rs  mmu.rs  ops_decode.rs  primitive_audio.rs  traps.rs  uart.rs
src/gdb/: mod.rs
test_asm/: build.sh  common.s  link.x
test_asm/tests/: testadd.s  testaddi.s  testbltu.s  testsll.s  testtraps.s  trap_test.s
