[package]
name = "bad_apple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embedded-alloc = "0.6.0"

riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.16.0", features = ["single-hart"] }

[build-dependencies]
rodio = "0.21.1"
